[build-system]
requires = [
    "scikit-build-core ~= 0.10.7", 
    "nanobind ~= 2.2.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "acl-cpp-python"
version = "0.5.1"
readme = "README.md"
description = "Python bindings for the AtCoder Library"
requires-python = ">=3.9"
authors = [
  { name = "tatyam" },
]
keywords = ["AtCoder", "AtCoder Library", "ACL"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"

[project.urls]
homepage = "https://github.com/tatyam-prime/acl-cpp-python"
repository = "https://github.com/tatyam-prime/acl-cpp-python"
documentation = "https://tatam-prime.github.io/acl-cpp-python/en/"

[project.optional-dependencies]
docs = [
  "Sphinx ~= 8.1.3",
  "sphinx-rtd-theme ~= 3.0.2",
  "sphinx-intl ~= 2.3.1",
  "sphinx-copybutton ~= 0.5.2",
  "myst-parser ~= 4.0.0",
]
test = [
  "cibuildwheel ~= 2.22.0",
  "pytest ~= 8.3.4",
]
build = [
  "build ~= 1.2.2",
  "twine ~= 6.1.0",
]

[tool.cibuildwheel]
build = ["cp3{9,13}-*", "pp3{9,10}-*"]
archs = ["auto64"]
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"
